schroot (1.5.1-1) experimental; urgency=low

  * New upstream development release:
  * Build using dh and debhelper 8.1.
  * Build with Boost 1.46, and add boost-iostreams build dependency.
  * Fix building with --debug (Closes: #609067).  Thanks to
    Jonathan Callen.

 -- Roger Leigh <rleigh@debian.org>  Fri, 03 Jun 2011 19:43:21 +0100

schroot (1.5.0-1) experimental; urgency=low

  * New upstream development release:
    - The deprecated options priority, run-setup-scripts and
      run-exec-scripts (all chroot types) and location ("plain" and
      "directory" chroot types) have been obsoleted and removed from
      the documentation.
    - Source chroots no longer create a chroot with a -source suffix;
      the source: namespace should be used instead.  Likewise sessions
      are no longer present in the chroot: namespace, and are only
      found in the session: namespace.  This means the fully-qualified
      name must be used to refer to sessions except when performing
      actions which use session: as the default namespace.
    - Support for zip file archives has been removed.  zip was not able
      to archive named pipes and device nodes, and so was not usable
      for chroot archival.
    - AUTH_VERBOSITY is no longer set in setup scripts.  Please use
      VERBOSE instead.  VERBOSITY replaced and deprecated
      AUTH_VERBOSITY in version 1.4.5.
  * schroot: Don't Suggest unzip now zip is not a supported archive
    format.

 -- Roger Leigh <rleigh@debian.org>  Sun, 16 Jan 2011 22:02:34 +0000

schroot (1.4.23-1) unstable; urgency=low

  * New upstream stable release.
  * schroot: Breaks sbuild (<< 0.62.4-1) due to requirement for
    /var/lib/sbuild/build to exist when using the sbuild or
    buildd profiles.  /var/lib/sbuild/build is bind mounted on
    /build in the build chroot.

 -- Roger Leigh <rleigh@debian.org>  Fri, 24 Jun 2011 23:30:01 +0100

schroot (1.4.22-1) unstable; urgency=low

  * New upstream stable release.